--- a/app/style.css
+++ b/app/style.css
@@ -61,6 +61,9 @@ body {
 .bg-body-tertiary {
     --bs-bg-opacity: 1;
     background-color: rgb(241 241 241) !important;
+    position: fixed;
+    overflow-y: auto;
+    width: 100%;
 }
 
 .col-top {
@@ -151,8 +154,9 @@ body {
     position: relative;
     width: 200px;
     font-family: Arial, sans-serif;
-  }
-  .dropdown-toggle {
+}
+
+.dropdown-toggle {
     width: 100%;
     padding: 10px 15px;
     background-color: white;
@@ -161,12 +165,14 @@ body {
     text-align: left;
     font-size: 16px;
     cursor: pointer;
-  }
-  .arrow {
+}
+
+.arrow {
     float: right;
     font-size: 12px;
-  }
-  .dropdown-menu {
+}
+
+.dropdown-menu {
     position: absolute;
     top: 100%;
     left: 0;
@@ -178,20 +184,31 @@ body {
     border: 1px solid #ccc;
     border-top: none;
     border-radius: 0 0 5px 5px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-  }
-  .dropdown-menu li {
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.dropdown-menu li {
     padding: 10px 15px;
     cursor: pointer;
-  }
-  .dropdown-menu li:hover {
-    background-color: #f0f0f0;
-  }
+}
 
-  .formWrapperStyle {
+.dropdown-menu li:hover {
+    background-color: #f0f0f0;
+}
+
+.formWrapperStyle {
     border: "1px solid #e0e0e0";
     border-radius: "8px";
     box-shadow: "0 2px 10px rgba(0, 0, 0, 0.1)";
     padding: "20px";
     margin-top: "20px";
-  };
+}
+
+.far-right {
+    margin-top: 45px;
+    position: fixed;
+    z-index: -999;
+    overflow-y: auto;
+}
+
+;
